feat: Add target creation UI and protocol

--- a/ui/styles/globals.scss
+++ b/ui/styles/globals.scss
@@ -1,6 +1,4 @@
-$theme-colors: (
-  "dark": #000000,
-  "primary": #ff7f2a,
-);
+$primary: darken(#00ccff, 4%);
+$dark: #000000;
 
 @import "~bootstrap/scss/bootstrap";
